--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cal-time",
+  "name": "format-time",
   "version": "1.0.0",
-  "description": "Simple function to return time in hh:mmAM/PM format given unformatted string",
+  "description": "Return consistently formatted time string given a string of messy time format",
   "main": "lib/index.js",
   "scripts": {
     "test": "make test",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tonybranfort/cal-time"
+    "url": "https://github.com/tonybranfort/format-time"
   },
   "devDependencies": {
     "mocha": "2.x",
@@ -18,7 +18,10 @@
   },
   "keywords": [
     "time",
-    "convert"
+    "convert",
+    "format",
+    "google",
+    "calendar"
   ],
   "author": "Tony Branfort",
   "license": "MIT"
